# Multi-Robot-Exploration

./: .gitignore  README.md
MRS-ROS2/: README.md
multi-robot-exploration-rl/: README.md
multi-robot-exploration-rl/scripts/: launch_env_headless.sh  launch_train_host.sh  open_gazebo_gui.sh
multi-robot-exploration-rl/src/start_reinforcement_learning/: setup.py
multi-robot-exploration-rl/src/start_reinforcement_learning/start_reinforcement_learning/maddpg_algorithm/: networks.py
multi-robot-exploration-rl/src/start_rl_environment/: package.xml
multi-robot-exploration-rl/src/start_rl_environment/launch/: main.launch.py  start_robots.launch.py  start_world.launch.py
multi-robot-exploration-rl/src/start_rl_environment/worlds/: map1.world  map2.world
