<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>start_rl_environment</name>
  <version>0.0.0</version>
  <description>
    Starts Gazebo, loads the training maps, and spawns the robots used by the multi-robot exploration project.
  </description>
  <maintainer email="nohacks2701@gmail.com">Theo Moore-Calters</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- simple_launch is installed separately in the development environment -->
  <depend>gazebo_ros_pkgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
